# TaskPulse

./: README.md
backend/: .gitignore  main.py  models.py  pyproject.toml
backend/app/: main.py
backend/app/api/: tasks.py  webhooks.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: task.py
backend/app/schemas/: task.py
frontend/: .env  package-lock.json
frontend/src/components/: KanbanBoard.jsx  Layout.jsx  TaskCard.jsx  TaskColumn.jsx  TaskForm.jsx
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx  PricingPage.jsx  SignInPage.jsx  SignUp.jsx
frontend/src/services/: api.js
