[project]
name = "taskpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.136.3",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "svix>=1.95.2",
    "uvicorn>=0.49.0",
]
